manifest/2_dp/dp_cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-dp
  labels:
    app: otus-dp
spec:
  replicas: 2
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
      - name: otus-app
        image: andrey1andrey/otus_1.7:latest
        ports:
        - containerPort: 8000
